added link to demo

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -6,7 +6,7 @@ author:
   name: Paul Massendari
   email: paul@massendari.com
 homepage: https://github.com/paul-massendari/grav-theme-chalk
-demo: http://demo.yoursite.com
+demo: http://chalk.paulmassendari.com
 keywords: grav, theme, etc
 bugs: https://github.com/paul-massendari/grav-theme-chalk/issues
 readme: https://github.com/paul-massendari/grav-theme-chalk/blob/develop/README.md
