Added the Category and tag to the main tab

--- a/blueprints/post.yaml
+++ b/blueprints/post.yaml
@@ -11,3 +11,27 @@ form:
               label: A few words to describe the topic of this post
               style: vertical
               ordering@: header.title
+            header.taxonomy:
+              type: taxonomy
+              label: PLUGIN_ADMIN.TAXONOMY
+              multiple: true
+              validate:
+                type: array
+              ordering@: header.headline
+        options:
+          fields:
+            taxonomies:
+              type: section
+              ordering@: header.title
+              title: PLUGIN_ADMIN.TAXONOMIES
+              underline: true
+              unset@: true
+
+              fields:
+                header.taxonomy:
+                  type: taxonomy
+                  unset@: true
+                  label: PLUGIN_ADMIN.TAXONOMY
+                  multiple: true
+                  validate:
+                    type: array
